# whatson

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ingest  Dockerfile.webapp  Makefile  README.md  alembic.ini  config.ini  config.json  config.toml  docker-compose.yml  elm.json  go.mod  go.sum  hosts  main.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  setup.py  tox.ini  webpack.config.js
alembic/versions/: a1edd76a2259_add_listing_url.py
archive/: Procfile  config.ini  elm.json  tailwind.config.js  testrequirements.txt
archive/alembic/: env.py
archive/fixtures/: test_parse_albany.yaml  test_parse_resortsworld_arena.html
archive/testing/: test_arena_birmingham.py  test_export_fixture.py  test_parse_albany.py  test_parse_belgrade.py  test_parse_resortsworld_arena.py  test_webapp.py
archive/tests/: Example.elm
fixtures/: test_parse_albany.html  test_parse_arena_birmingham.html  test_parse_belgrade.yaml  test_parse_hippodrome.yaml  test_parse_resortsworld_arena.html  test_parse_symphony_hall.yaml
provisioning/: main.yml  requirements.yml
src/: index.js  main.rs
testing/: conftest.py  test_arena_birmingham.py  test_date_parsing.py  test_extractors.py  test_fetchers.py  test_ingest.py  test_parse_albany.py  test_parse_belgrade.py  test_parse_hippodrome.py  test_parse_resortsworld_arena.py  test_parse_symphony_hall.py  test_theatredef.py  test_webapp.py
tests/: Example.elm
whatson/: db.py  exportfixture.py  fetchers.py  ingest.py  models.py  parsers.py  theatredef.py  webapp.py  wsgi.py
(+47 files in other folders)
