[package]
name = "whatson"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
structopt = "0.3.1"
serde = { version = "1.0.100", features = ["derive"] }
chrono = "0.4.9"
serde_json = "1.0.40"
scraper = "0.10.1"
select = "0.4.3"
